Licensing Server/manifests/enclave-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enclave-svc
spec:
  type: ClusterIP 
  ports:
  - port: 8082
    targetPort: 8082
  selector:
    app: enclave
