Licensing Server/manifests/licensing-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: licensing-server-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: licensing-server
  template:
    metadata:
      labels:
        app: licensing-server
    spec:
      serviceAccountName: licensing-server-sa  
      containers:
      - image: younes0204/client-operations:latest
        name: client-operations
        ports:
          - containerPort: 8081
        volumeMounts:
          - mountPath: "/etc/tls"
            name: licensing-server-tls
            readOnly: true
      - image: younes0204/server-operations:latest
        name: server-operations
        ports:
          - containerPort: 50051
      volumes:
        - name: licensing-server-tls
          secret:
            secretName:  licensing-server-tls
---
apiVersion: v1
kind: Service
metadata:
  name: licensing-server-svc
spec:
  type: ClusterIP 
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: licensing-server
