Licensing Server/manifests/enclave-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enclave-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - enclave.default.svc
      secretName: enclave-tls
  rules:
   - http:
      paths:
      - path: /enclave
        pathType: Prefix
        backend:
          service:
            name: enclave-svc
            port: 
              number: 8082
