Licensing Server/manifests/licensing-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: licensing-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - licensing-server-svc.default.svc
      secretName: licensing-server-tls
  rules:
   - http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: licensing-server-svc
            port: 
              number: 8081
      - path: /signup
        pathType: Prefix
        backend:
          service:
            name: licensing-server-svc
            port: 
              number: 8081
      - path: /enclave
        pathType: Prefix
        backend:
          service:
            name: enclave-svc
            port: 
              number: 8082
